--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~normalize.css/normalize.css';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+html,
+body,
+app-root {
+  width: 100%;
+  height: 100%;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
+}
+
+app-root {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
 }
