Added angularfire2 - Added login via email link - Added basic app pages - Added AuthService - Added AuthGuard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,19 +12,19 @@
   <mat-toolbar color="primary">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
 
-      <a href="#" mat-stroked-button>
+      <a routerLink="/" mat-stroked-button>
         <mat-icon>add_shopping_cart</mat-icon>
       </a>
 
-      <a href="#" mat-stroked-button>
+      <a routerLink="/shopping-list" mat-stroked-button>
         <mat-icon>shopping_cart</mat-icon>
       </a>
 
-      <a href="#" mat-stroked-button>
+      <a routerLink="/history" mat-stroked-button>
         <mat-icon>hourglass_empty</mat-icon>
       </a>
 
-      <a href="#" mat-stroked-button>
+      <a routerLink="/user" mat-stroked-button>
         <mat-icon>person</mat-icon>
       </a>
     </mat-toolbar-row>
