Added simple user form

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,10 @@
-<p>
-  user works!
-</p>
+<div class="container">
+  <span>Welcome, {{displayName}}</span>
+
+  <form class="example-form">
+    <mat-form-field class="example-full-width">
+      <input matInput placeholder="Display name" [value]=displayName>
+    </mat-form-field>
+  </form>
+
+</div>
