Fixed footer menu to be more responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,21 +10,21 @@
 
 <footer>
   <mat-toolbar color="primary">
-    <mat-toolbar-row fxLayout="row" fxLayoutAlign="space-between center">
+    <mat-toolbar-row fxLayout="row" fxLayoutAlign="center center">
 
-      <a routerLink="/" mat-stroked-button>
+      <a routerLink="/" class="btn-footer left-border">
         <mat-icon>add_shopping_cart</mat-icon>
       </a>
 
-      <a routerLink="/shopping-list" mat-stroked-button>
+      <a routerLink="/shopping-list" class="btn-footer left-border">
         <mat-icon>shopping_cart</mat-icon>
       </a>
 
-      <a routerLink="/history" mat-stroked-button>
+      <a routerLink="/history" class="btn-footer left-border">
         <mat-icon>hourglass_empty</mat-icon>
       </a>
 
-      <a routerLink="/user" mat-stroked-button>
+      <a routerLink="/user" class="btn-footer left-border right-border">
         <mat-icon>person</mat-icon>
       </a>
     </mat-toolbar-row>
