--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,16 +1,17 @@
 <div class="container">
-  <span>Welcome, {{userName}}</span>
+
+  <strong>Welcome, {{userName}}</strong>
 
   <form (ngSubmit)="updateDisplayName()" class="form" fxLayout="row">
     <mat-form-field fxFlex="2 2 auto">
-      <input matInput placeholder="Enter new display name or empty for email" [(ngModel)]="displayName" name="displayName">
+      <input matInput placeholder="Display name" [(ngModel)]="displayName" name="displayName">
     </mat-form-field>
 
     <mat-icon class="btn-clear" (click)="clearDisplayName()">clear</mat-icon>
 
-    <button mat-raised-button type="submit" fxFlexOffset="10px" class="btn" color="primary">Submit</button>
+    <button mat-raised-button type="submit" fxFlexOffset="10px" class="btn" color="primary" [disabled]="loading">Submit</button>
   </form>
 
-  <button (click)="logout()">Logout</button>
+  <button mat-raised-button color="accent" (click)="logout()">Logout</button>
 
 </div>
