--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,16 +1,27 @@
 <div class="container">
 
-  <strong>Welcome, {{userName}}</strong>
+  <strong class="header">Welcome, {{userName}}</strong>
 
-  <form (ngSubmit)="updateDisplayName()" class="form" fxLayout="row">
-    <mat-form-field fxFlex="2 2 auto">
-      <input matInput placeholder="Display name" [(ngModel)]="displayName" name="displayName">
-    </mat-form-field>
+  <mat-accordion>
+    <mat-expansion-panel>
 
-    <mat-icon class="btn-clear" (click)="clearDisplayName()">clear</mat-icon>
+      <mat-expansion-panel-header>
+        <mat-panel-title>Edit display name</mat-panel-title>
+      </mat-expansion-panel-header>
 
-    <button mat-raised-button type="submit" fxFlexOffset="10px" class="btn" color="primary" [disabled]="loading">Submit</button>
-  </form>
+      <form (ngSubmit)="updateDisplayName()" class="form">
+        <mat-form-field class="full-width">
+          <input matInput placeholder="New display name" [(ngModel)]="displayName" id="displayName" name="displayName">
+        </mat-form-field>
+
+        <mat-icon class="btn-clear" (click)="clearDisplayName()">clear</mat-icon>
+
+        <button mat-raised-button type="submit" class="btn" color="primary" [disabled]="loading">Submit</button>
+      </form>
+
+    </mat-expansion-panel>
+
+  </mat-accordion>
 
   <button mat-raised-button color="accent" (click)="logout()">Logout</button>
 
