Moved getting user groups from httpService to databaseService

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -29,7 +29,7 @@
       <button mat-raised-button type="submit" class="btn" color="primary" [disabled]="loading" (click)="addGroup()">Add</button>
 
       <ul>
-        <li *ngFor="let group of groups">{{group.name}}</li>
+        <li *ngFor="let group of groups">{{group.name}} | {{group.id}}</li>
       </ul>
 
       <!-- <form (ngSubmit)="updateDisplayName()" class="form">
