--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -23,3 +23,13 @@
 .fill-width {
   width: calc(100% - 98px);
 }
+
+.mat-list {
+  .mat-list-item {
+    height: 30px;
+
+    .mat-list-item-content {
+      padding: 0;
+    }
+  }
+}
