--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
 app-root {
   min-height: 100%;
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr auto;
   grid-template-columns: 100%;
 }
 
