Changed from footer to nav tags since this will probably move on md/ld

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 
 </mat-sidenav-container>
 
-<footer>
+<nav>
   <mat-toolbar color="primary">
     <mat-toolbar-row fxLayout="row" fxLayoutAlign="center center">
 
@@ -67,4 +67,4 @@
       </a>
     </mat-toolbar-row>
   </mat-toolbar>
-</footer>
+</nav>
