--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,9 @@
-<p>
-  home works!
-</p>
+<div id="home-page">
+  <div class="container">
+    <header class="home-header">
+      <h1>Welcome to</h1>
+      <h3>Grocery</h3>
+      <h4>Personal Shopping Assistan</h4>
+    </header>
+  </div>
+</div>
